--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
 
+    // Location Services
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //Lottie Animation
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+
 }
