--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
+        android:name=".location.LocationApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +18,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTopics"
         tools:targetApi="31">
+
+        <service android:name=".location.LocationService" android:foregroundServiceType="location" />
+
+        <activity
+            android:name=".location.LocationActivity"
+            android:exported="false" />
         <activity
             android:name=".rxjava.ui.activities.RxjavaActivity"
             android:exported="false" />
