--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".location.LocationApplication"
@@ -18,8 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTopics"
         tools:targetApi="31">
+        <activity
+            android:name=".livedata.ui.ObserveActivity"
+            android:exported="false" />
 
-        <service android:name=".location.LocationService" android:foregroundServiceType="location" />
+        <service
+            android:name=".location.LocationService"
+            android:foregroundServiceType="location" />
 
         <activity
             android:name=".location.LocationActivity"
