--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,11 @@ dependencies {
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    // Unsplash library
+    implementation 'com.github.unsplash:unsplash-photopicker-android:1.0.1'
+
+    // Event bus library
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'org.greenrobot:eventbus:3.2.0'
 
 }
