--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".location.LocationApplication"
+        android:name=".glide.application.GetImage"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,6 +18,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidTopics"
         tools:targetApi="31">
+        <activity
+            android:name=".eventbus.CartActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".eventbus.ItemActivity"
+            android:exported="false" />
+        <activity
+            android:name=".pagination.ui.activities.DataActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".glide.ui.activities.ImageActivity"
+            android:exported="false" />
         <activity
             android:name=".livedata.ui.ObserveActivity"
             android:exported="false" />
@@ -34,12 +53,14 @@
             android:exported="false" />
         <activity
             android:name=".main.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
