--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,21 +19,25 @@
         android:theme="@style/Theme.AndroidTopics"
         tools:targetApi="31">
         <activity
-            android:name=".eventbus.CartActivity"
+            android:name=".flows.activities.ObserverActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity
+            android:name=".eventbus.CartActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".eventbus.ItemActivity"
             android:exported="false" />
         <activity
             android:name=".pagination.ui.activities.DataActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".glide.ui.activities.ImageActivity"
             android:exported="false" />
